test: enable source fetcher tests

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -32,6 +32,8 @@ jobs:
           lint: false
       - name: Test
         run: go test ./... -tags test -coverpkg=./... -coverprofile=coverage.out -covermode=atomic
+        env:
+          SOURCES_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
