--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -12,6 +12,10 @@ runs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Download dependencies
       shell: bash
       run: |
