fixup! test: enable source fetcher tests

--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -5,6 +5,9 @@ inputs:
     description: Lint sources
     required: false
     default: true
+  token:
+    description: GitHub token
+    required: true
 runs:
   using: composite
   steps:
@@ -15,7 +18,7 @@ runs:
     - name: Install Protoc
       uses: arduino/setup-protoc@v3
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        repo-token: ${{ inputs.token }}
     - name: Download dependencies
       shell: bash
       run: |
