--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up
         uses: ./.github/actions/setup
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
         run: go test ./... -tags test -coverpkg=./... -coverprofile=coverage.out -covermode=atomic
       - name: Upload coverage to Codecov
