--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -15,6 +15,10 @@ runs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
+    - name: Extend PATH
+      shell: bash
+      run: |
+        echo "$GOPATH/bin" >>"$GITHUB_PATH"
     - name: Install Protoc
       uses: arduino/setup-protoc@v3
       with:
