--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
         id: bump-version
         uses: mathieudutour/github-tag-action@v6.2
         with:
+          create_annotated_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Release
         if: steps.bump-version.outputs.new_version != ''
