--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: go test ./... -tags test -coverpkg=./... -coverprofile=coverage.out -covermode=atomic
+        run: go test ./... -tags test -coverpkg=github.com/mtth/gitfetcher/internal -coverprofile=coverage.out -covermode=atomic
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
