fixup! feat: add glob filter support

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
         run: go test ./... -tags test -coverpkg=github.com/mtth/gitfetcher/internal -coverprofile=coverage.out -covermode=atomic
+        env:
+          SOURCES_GITHUB_TOKEN: ${{ secrets.SOURCES_GITHUB_TOKEN }}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
