--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,7 @@
 name: Release
 on:
-  # schedule:
-  #   - cron: '5 */8 * * *'
+  schedule:
+    - cron: '45 0 * * *'
   workflow_dispatch: {}
 jobs:
   create:
