--- a/internal/testdata/.gitfetcher.conf
+++ b/internal/testdata/.gitfetcher.conf
@@ -1,3 +1,3 @@
-root: "./projects"
+options { root: "./projects" }
 sources { from_url { url: "https://github.com/mtth/gitfetcher" }}
 sources { from_github_token { token: "$GITHUB_TOKEN" }}
