build: publish man page during release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,6 +59,18 @@ jobs:
           build: false
           lint: false
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3
+      - name: Set up AsciiDoctor
+        uses: reitzig/actions-asciidoctor@v2.0.2
+        with:
+          version: 2.0.18
+      - name: Generate man page
+        run: |
+          asciidoctor -b manpage -d manpage docs/gitfetcher.adoc -o - \
+            | gzip -9 >gitfetcher.1.gz
       - name: Add binary
         uses: wangyoucao577/go-release-action@v1
         with:
@@ -68,3 +80,4 @@ jobs:
           release_tag: ${{ needs.create.outputs.release-tag }}
           md5sum: false
           sha256sum: true
+          extra_files: gitfetcher.1.gz
