fixup! feat: add local target detection

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -16,6 +16,8 @@ linters-settings:
     import-require-single-import: true
   nakedret:
     max-func-lines: 50
+  nestif:
+    min-complexity: 7
   nolintlint:
     require-specific: true
   testifylint:
