fixup! feat: add local target detection

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -34,7 +34,7 @@ jobs:
           lint: false
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: go test ./... -tags test -coverpkg=github.com/mtth/gitfetcher/internal -coverprofile=coverage.out -covermode=atomic
+        run: go test ./... -tags test -coverpkg=github.com/mtth/gitfetcher/internal/... -coverprofile=coverage.out -covermode=atomic
         env:
           SOURCES_GITHUB_TOKEN: ${{ secrets.SOURCES_GITHUB_TOKEN }}
       - name: Upload coverage to Codecov
