--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: go test ./... -tags test -coverpkg=github.com/mtth/gitfetcher/internal -coverprofile=coverage.out -covermode=atomic
+        run: >
+          go test ./...
+            -tags test
+            -coverpkg=github.com/mtth/gitfetcher/internal/...
+            -coverprofile=coverage.out
+            -covermode=atomic
         env:
           SOURCES_GITHUB_TOKEN: ${{ secrets.SOURCES_GITHUB_TOKEN }}
       - name: Upload coverage to Codecov
