--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: >
+        run: >-
           go test ./...
             -tags test
             -coverpkg=github.com/mtth/gitfetcher/internal/...
