--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,4 +1,6 @@
 linters-settings:
+  dogsled:
+    max-blank-identifiers: 3
   errcheck:
     check-type-assertions: true
   govet:
@@ -16,6 +18,8 @@ linters-settings:
     import-require-single-import: true
   nakedret:
     max-func-lines: 50
+  nestif:
+    min-complexity: 7
   nolintlint:
     require-specific: true
   testifylint:
